--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,13 @@
   justify-content:space-between;
 }
 
+.navigation-sub {
+  display: flex;
+  align-items: center;
+}
+
 .nav-item {
-  padding-inline-start: 3em;
+  padding: 1em;
   text-decoration: none;
   /* color: #000; */
   font-size: 14pt;
@@ -247,6 +252,5 @@
     .project-text-mobile {
     display: flex;
     margin: -.5em 0 2em 0;
-    color: #000;
   }
 }
