--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,23 @@
+* {
+  cursor: none !important;
+}
+
 .App {
   padding: 6em 8em 6em 8em;
+}
+
+.custom-cursor {
+  backdrop-filter: blur(1.5px) !important;
+  /* background-color: var('--theme-ui-colors-primary'); */
+  background-color: rgba(0, 0, 0, .35);
+  border-radius: 2em;
+  height: 1.5em;
+  width: 1.5em;
+  border: 1pt solid #fff;
+}
+
+.cursor--hidden {
+  opacity: 0;
 }
 
 .navigation {
@@ -55,12 +73,12 @@
 
 .project-image:hover {
   box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
-  transition: 250ms cubic-bezier(0.23, 1, 0.320, 1);
+  transition: 500ms cubic-bezier(0.23, 1, 0.320, 1);
 }
 
 .project-image:active {
   box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
-  transition: 250ms cubic-bezier(0.23, 1, 0.320, 1);
+  transition: 500ms cubic-bezier(0.23, 1, 0.320, 1);
 }
 
 .text-hover-wrapper {
@@ -75,12 +93,12 @@
   justify-content: center;
   align-items: center;
   opacity: 0;
-  transition: 250ms cubic-bezier(0.23, 1, 0.320, 1);
+  transition: 500ms cubic-bezier(0.23, 1, 0.320, 1);
 }
 
 .text-hover-wrapper:hover {
   opacity: 1;
-  transition: 250ms cubic-bezier(0.23, 1, 0.320, 1);
+  transition: 500ms cubic-bezier(0.23, 1, 0.320, 1);
 }
 
 .text-hover {
