Fixed mobile hover element issue

--- a/src/App.css
+++ b/src/App.css
@@ -267,8 +267,12 @@
 }
 
 @media (hover: none) {
-    .project-text-mobile {
+  .project-text-mobile {
     display: flex;
     margin: -.5em 0 2em 0;
+  }
+
+  .text-hover-wrapper {
+    display: none;
   }
 }
